kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        # Will be replaced by CI/CD pipeline
        image: ghcr.io/nyrahul/wisecow:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4499
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
